{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 83,
  "lineage": "2da03646-f40d-c9ef-15c1-352026a36cd1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f84dfe86443a0979",
            "domain": "vpc",
            "id": "eipalloc-03c4f6224d21f68e1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d23f7a64031b99dd",
            "private_dns": "ip-10-0-1-59.ec2.internal",
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-54-174-45-23.compute-1.amazonaws.com",
            "public_ip": "54.174.45.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:022598194260:instance/i-0638c645e1ca05ae4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0638c645e1ca05ae4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testebs",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e4758599c59f8f6",
            "private_dns": "ip-10-0-2-18.ec2.internal",
            "private_ip": "10.0.2.18",
            "public_dns": "ec2-54-90-112-166.compute-1.amazonaws.com",
            "public_ip": "54.90.112.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01b48d523c34a4b58",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01aa3c174c5181b6c",
            "tags": {
              "Environment": "Production",
              "Name": "web-server1"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "web-server1-vol"
            },
            "vpc_security_group_ids": [
              "sg-05ad6646977bc56f2"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver-sg",
            "aws_subnet.publicsubnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:022598194260:instance/i-08d9c6eafcbee08e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d9c6eafcbee08e7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testebs",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08a5dc3856af5daac",
            "private_dns": "ip-10-0-1-150.ec2.internal",
            "private_ip": "10.0.1.150",
            "public_dns": "ec2-3-82-101-91.compute-1.amazonaws.com",
            "public_ip": "3.82.101.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04774ac49ac4b90b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4440c4fa0720bb4",
            "tags": {
              "Environment": "Production",
              "Name": "web-server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ad6646977bc56f2"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver-sg",
            "aws_subnet.publicsubnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:internet-gateway/igw-0f5f444e4d3a9aac2",
            "id": "igw-0f5f444e4d3a9aac2",
            "owner_id": "022598194260",
            "tags": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c4f6224d21f68e1",
            "id": "nat-06aa26f39c6891e5f",
            "network_interface_id": "eni-0d23f7a64031b99dd",
            "private_ip": "10.0.1.59",
            "public_ip": "54.174.45.23",
            "subnet_id": "subnet-0b4440c4fa0720bb4",
            "tags": {
              "Name": "main-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.publicsubnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00432df99ae83207f",
            "owner_id": "022598194260",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06aa26f39c6891e5f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-rt"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_nat_gateway.main-natgw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-011b48deea71426ff",
            "owner_id": "022598194260",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5f444e4d3a9aac2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-rt"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09912ceb4df2f9885",
            "route_table_id": "rtb-00432df99ae83207f",
            "subnet_id": "subnet-06270e5765590822f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.privatesubnet1",
            "aws_subnet.publicsubnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4dd0bf1cce91d6d",
            "route_table_id": "rtb-00432df99ae83207f",
            "subnet_id": "subnet-070a82688e6816ee4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.privatesubnet2",
            "aws_subnet.publicsubnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9215fd927ee25f3",
            "route_table_id": "rtb-00432df99ae83207f",
            "subnet_id": "subnet-028e82b63df0add97"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.privatesubnet3",
            "aws_subnet.publicsubnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-assoc-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061e8c1789667254c",
            "route_table_id": "rtb-00432df99ae83207f",
            "subnet_id": "subnet-04fbec6e63bcc3f81"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main-natgw",
            "aws_route_table.main-private-rt",
            "aws_subnet.privatesubnet4",
            "aws_subnet.publicsubnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ae4f7f1e377392b",
            "route_table_id": "rtb-011b48deea71426ff",
            "subnet_id": "subnet-0b4440c4fa0720bb4"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.publicsubnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0824dccf1d95823b3",
            "route_table_id": "rtb-011b48deea71426ff",
            "subnet_id": "subnet-01aa3c174c5181b6c"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.publicsubnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07765ed9b15308d75",
            "route_table_id": "rtb-011b48deea71426ff",
            "subnet_id": "subnet-002c52cd9b27aa79e"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.publicsubnet3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-assoc-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e0b725658853a2b",
            "route_table_id": "rtb-011b48deea71426ff",
            "subnet_id": "subnet-049914594ad0f0534"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-rt",
            "aws_subnet.publicsubnet4",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:security-group/sg-05ad6646977bc56f2",
            "description": "Allow limited inbound external traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ad6646977bc56f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "022598194260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:subnet/subnet-06270e5765590822f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-06270e5765590822f",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:subnet/subnet-070a82688e6816ee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-070a82688e6816ee4",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:subnet/subnet-028e82b63df0add97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-028e82b63df0add97",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:subnet/subnet-04fbec6e63bcc3f81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-04fbec6e63bcc3f81",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "private-subnet-4"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:subnet/subnet-0b4440c4fa0720bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b4440c4fa0720bb4",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:subnet/subnet-01aa3c174c5181b6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01aa3c174c5181b6c",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:subnet/subnet-002c52cd9b27aa79e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-002c52cd9b27aa79e",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:subnet/subnet-049914594ad0f0534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-049914594ad0f0534",
            "map_public_ip_on_launch": false,
            "owner_id": "022598194260",
            "tags": {
              "Name": "public-subnet-4"
            },
            "vpc_id": "vpc-0053621d6231cb3b8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022598194260:vpc/vpc-0053621d6231cb3b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c50d2166850170e",
            "default_route_table_id": "rtb-054ba74404beeffd5",
            "default_security_group_id": "sg-018f3cb2b2ae01364",
            "dhcp_options_id": "dopt-84d053fe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0053621d6231cb3b8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-054ba74404beeffd5",
            "owner_id": "022598194260",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}